# low_level_binary_representations

./: README.md
components/: CMakeLists.txt  main.cpp
components/services/IEEE_754_Representation/components/: subunitary_mantissa.cpp
components/services/IEEE_754_Representation/utils/: utils.cpp  utils.h
components/ui/: console.cpp  console.h
low_level_representations/: CMakeLists.txt  main.cpp
low_level_representations/services/IEEE_754_Representation/: SubUnitaryMantissa.h  subunitary_mantissa.cpp  supraunitary_mantissa.cpp
low_level_representations/services/IEEE_754_Representation/components/: SupraUnitaryMantissa.h  supraunitary_mantissa.cpp
low_level_representations/services/IEEE_754_Representation/utils/: utils.h
low_level_representations/ui/: console.cpp  console.h
